# ML

./: README.md
perceptron/: .CMakeLists.txt.swp  CMakeLists.txt  README.md
perceptron/data/: simple.data  spambase.data
perceptron/include/: perceptron.h
perceptron/src/: perceptron.cpp  perceptron_demo.cpp
